l10n: fr.po Add missing accent
Signed-off-by: Fabien Villepinte <fabien.villepinte@gmail.com>

--- a/po/fr.po
+++ b/po/fr.po
@@ -17161,7 +17161,7 @@ msgstr "Échec à l'ouverture de %s.final : %s"
 
 #: git-send-email.perl:778
 msgid "Summary email is empty, skipping it\n"
-msgstr "Le courriel de résumé etant vide, il a été ignoré\n"
+msgstr "Le courriel de résumé étant vide, il a été ignoré\n"
 
 #. TRANSLATORS: please keep [y/N] as is.
 #: git-send-email.perl:813
