--- a/po/es.po
+++ b/po/es.po
@@ -8601,7 +8601,7 @@ msgid ""
 "No tags can describe '%s'.\n"
 "Try --always, or create some tags."
 msgstr ""
-"Ningún tag puede describit '%s'.\n"
+"Ningún tag puede describir '%s'.\n"
 "Intente --always, o cree algunos tags."
 
 #: builtin/describe.c:426
